@@ -1,3 +1,9 @@
+2006-01-06  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
+	  not libintl.dll (according to
+	  http://www.gimp.org/~tml/gimp/win32/downloads.html).
+
 2005-09-23  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Catalog.cs, PeerCred.cs, Syscall.cs, UnixEndPoint.cs: [Obsolete] public
